fixed the spacing for the images.

--- a/list.css
+++ b/list.css
@@ -10,10 +10,11 @@ main section div h3{
     font-size: 20px;
 }
 main .pantry{
-    background-color: bisque;
+    /*background-color: bisque;*/
     display: flex;
 }
 main .canned{
+    display: flex;
     background-color: grey;
     padding: 0px 10px;
     margin: 10px 20px 10px 0px;
@@ -24,7 +25,7 @@ main #dry{
     margin: 10px 20px 10px 0px;
 }
 main .freezer{
-    background-color: bisque;
+    /*background-color: bisque;*/
     display: flex;
 }
 main .viggies{
@@ -38,6 +39,8 @@ main #snacks{
     margin: 10px 20px 10px 0px;
 }
 img{
+    display: flex;
+    height: 153px;
     width: 200px;
-    height: 150px;
+    margin-top: 10px;
 }
